# meridian

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  docker-compose.yml  meridian.py  pyproject.toml
docs/: comms-spec.md
meridian/: __init__.py  cli.py  config.py  demote.py  email.py  gateway.py  mcp_server.py  schemas.py  session.py  storage.py  web.py  workers.py
meridian/static/: channel.html  index.html
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  prerecall.py
plugin/skills/briefing/: SKILL.md
plugin/skills/recall/: SKILL.md
plugin/skills/remember/: SKILL.md
scripts/: audit_memories.py  docker-entrypoint.sh  extract_and_purge.py  fix_extracted_importance.py  mcp_server.sh  migrate_markdown.py  pull-models.sh  start.sh  verify.sh
tests/: conftest.py  test_gateway.py  test_integration.py  test_recall_pytest.py  test_recall_quality.py  test_storage.py  test_workers.py
tools/: ingest_jsonl.py
