[project]
name = "meridian"
version = "0.2.0"
description = "Persistent Memory Architecture for Claude Code — Remember everything. Load only what matters."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "qdrant-client>=1.12.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "websockets>=13.0",
    "mcp>=1.0.0",
    "aiosmtplib>=5.0.0",
    "aioimaplib>=2.0.0",
]

[project.scripts]
meridian = "meridian:main"
