[project]
name = "meridian"
version = "0.3.0"
description = "Persistent Memory Architecture for Claude Code — Remember everything. Load only what matters."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "qdrant-client>=1.12.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "websockets>=13.0",
    "mcp>=1.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
meridian = "meridian:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
markers = [
    "integration: requires running Qdrant + Ollama services",
]
filterwarnings = [
    "ignore:datetime.datetime.utcnow:DeprecationWarning",
]
